# python_project

./: README.md  mot.txt  projet_pendu.py  pyproject.toml  python_project.html
