[project]
name = "python_project"
version = "0.1.0"
description = "Valider une cxertaine maîtrise de github"
authors = [
    {name = "Achille DARODES DE TAILLY", email = "achille.darodesdetailly@estaca.eu"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
